deployment/manifest/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: dg0301.20.214.196.128.nip.io
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: member
            port:
              number: 80
      - path: /api/mysub
        pathType: Prefix
        backend:
          service:
            name: mysub
            port:
              number: 80
      - path: /api/recommend
        pathType: Prefix
        backend:
          service:
            name: recommend
            port:
              number: 80
      # Swagger UI 경로 추가
      - path: /swagger-ui(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: member
            port:
              number: 80
      - path: /v3/api-docs(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: member
            port:
              number: 80
